:bug: Fixing a bug to return the right object after post topic